bk_ida/gccida/g1/walk_tree
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1573:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v10; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1585:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+8h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1608:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v8 = statement_code_p( ( tree_code)v9); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1608:36: error: expected ')'
v8 = statement_code_p( ( tree_code)v9); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1608:22: note: to match this '('
v8 = statement_code_p( ( tree_code)v9); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1609:87: error: expected expression
if ( v9 != 2 && !v8 && !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v5) ) 
                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1609:76: error: use of undeclared identifier 'tree_node'
if ( v9 != 2 && !v8 && !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v5) ) 
                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1609:25: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( v9 != 2 && !v8 && !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v5) ) 
                        ^~~~~~~~~~~~
                        lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1626:62: error: expected expression
v4 = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v5, walk_subtrees, func, data, htab_); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1626:50: error: use of undeclared identifier 'tree_node'
v4 = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v5, walk_subtrees, func, data, htab_); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1626:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v4 = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v5, walk_subtrees, func, data, htab_); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1729:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( statement_code_p( ( tree_code)v9) && ( *( ( _BYTE *)*v5 + 19) & 4) == 0 ) 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1729:36: error: expected ')'
if ( statement_code_p( ( tree_code)v9) && ( *( ( _BYTE *)*v5 + 19) & 4) == 0 ) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1729:22: note: to match this '('
if ( statement_code_p( ( tree_code)v9) && ( *( ( _BYTE *)*v5 + 19) & 4) == 0 ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1731:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)v9); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1731:36: error: expected ')'
rtl_op = first_rtl_op( ( tree_code)v9); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/tree-inline.c:1731:22: note: to match this '('
rtl_op = first_rtl_op( ( tree_code)v9); 
                     ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/walk_tree/src/obj/tree-inline.o] Error 1
